Fix items to be collapsable

--- a/ux-portfolio/src/components/groups/ItemGroup.scss
+++ b/ux-portfolio/src/components/groups/ItemGroup.scss
@@ -48,6 +48,7 @@
       order: 1;
       align-self: stretch;
       flex-grow: 0;
+      margin-top: 4px;
     }
   }
 }
