--- a/ux-portfolio/src/style/style.scss
+++ b/ux-portfolio/src/style/style.scss
@@ -223,6 +223,10 @@ li {
   }
 }
 
+.hidden {
+  display: none;
+}
+
 .main-content-container {
   width: 100%;
   display: flex;
